Configuring HBase build for 1.1.13-mapr release
The following changes are to be ensured for each release:
* fix the mapr-build.properties by removing com.mapr:mapr-root from pom file. If needed, please added it back.
* Update the version string in each module's pom to reflect the current release.
* Change the parent of HBase project pom from "org.apache:apache" to "com.mapr:mapr-root".
* Removed Apache SCM info.
* Added MapR maven repository.
* Added maven property "apache.git.tag" which should point the the Apache git commit on which this release is based on.
* Updated few dependencies' version to their MapR counterpart.
* Updated maven assembly descriptors to exclude Hadoop jars from getting included in the package.
* MAPR-15106: Exclude SLF4J jars from assembly.
* Updated slf4j version to 1.7.5.
* Removed hbase-hadoop1-compat support
* Remove repository.codehaus.org which is shut down

--- a/hbase-client/pom.xml
+++ b/hbase-client/pom.xml
@@ -23,12 +23,12 @@
   <parent>
     <artifactId>hbase</artifactId>
     <groupId>org.apache.hbase</groupId>
-    <version>1.1.13</version>
+    <version>1.1.13-mapr-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
   <artifactId>hbase-client</artifactId>
-  <name>Apache HBase - Client</name>
+  <name>HBase - Client</name>
   <description>Client of HBase</description>
 
   <build>
@@ -292,6 +292,10 @@
             <exclusion>
               <groupId>tomcat</groupId>
               <artifactId>jasper-runtime</artifactId>
+            </exclusion>
+            <exclusion>
+              <groupId>xerces</groupId>
+              <artifactId>xercesImpl</artifactId>
             </exclusion>
           </exclusions>
         </dependency>
