--- a/hbase-examples/pom.xml
+++ b/hbase-examples/pom.xml
@@ -23,11 +23,11 @@
   <parent>
     <artifactId>hbase</artifactId>
     <groupId>org.apache.hbase</groupId>
-    <version>1.1.13</version>
+    <version>1.1.13-mapr-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>hbase-examples</artifactId>
-  <name>Apache HBase - Examples</name>
+  <name>HBase - Examples</name>
   <description>Examples of HBase usage</description>
   <build>
     <plugins>
@@ -215,6 +215,12 @@ if we can combine these profiles somehow -->
              <dependency>
                  <groupId>org.apache.hadoop</groupId>
                  <artifactId>hadoop-common</artifactId>
+                 <exclusions>
+                     <exclusion>
+                         <groupId>xerces</groupId>
+                         <artifactId>xercesImpl</artifactId>
+                     </exclusion>
+                 </exclusions>
              </dependency>
          </dependencies>
          <build>
